--- a/academically-updated/dash.html
+++ b/academically-updated/dash.html
@@ -34,9 +34,14 @@
             <i class="fas fa-map-marker-alt"></i>
             <span>Campus Route</span>
         </button>
+        <button class="menu-button" onclick="window.location.href='calender.html'">
+            <i class="fas fa-calendar-alt"></i>
+            <span>activity calender</span>
+        </button>
     </div>
     <script src="scripts.js"></script>
 </body>
 </html>
+
 
 
