--- a/academically-updated/clubs.html
+++ b/academically-updated/clubs.html
@@ -11,29 +11,29 @@
     <h3>Clubs</h3>
     <div class="image-grid" align="center">
         <div class="image-card">
-            <img src="/images/coder.jpg" alt="Image 1">
+            <img src="coders.jpeg" alt="Image 1">
             <a href="/html/coder.html"><h3>Coders Club</h3></a>
         </div>
         <div class="image-card">
-            <img src="/images/mathss.jpg" alt="Image 2"  width="612">
+            <img src="math.jpg" alt="Image 2"  width="612">
             <a href="club1.html"><h3>Math Club</h3></a>
         </div>
         <div class="image-card">
-            <img src="/images/robot.jpg" alt="Image 3">
+            <img src="robot.jpg" alt="Image 3">
             <a href="/html/robot.html"><h3>Robotics Club</h3></a>
         </div>
         
         <div class="image-card">
-            <img src="/images/literaryy.jpg" alt="Image 4">
+            <img src="literary.jpg" alt="Image 4">
             <a href="/html/literary.html"><h3>Literary Club</h3></a>
         </div>
         <div class="image-card">
-            <img src="/images/innovation.jpg" alt="Image 5">
+            <img src="innovation.jpg" alt="Image 5">
             <a href="/html/innovation.html"><h3>Innovation Club</h3></a>
         </div>
         <div class="image-card">
-            <img src="/images/youth.jpg" alt="Image 6">
-            <a href="/html/youth.html"><h3>Youth India Club</h3></a>
+            <img src="youthindia.jpg" alt="Image 6">
+            <a href="/html/youthindia.html"><h3>Youth India Club</h3></a>
         </div>
     </div>
     <button class="home-btn" onclick="goToMain()">Home</button>
